// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Forgot Password component snapshots ForgotPassword 1`] = `
<div
  className="Wrappers"
>
  <main>
    <form
      onSubmit={[Function]}
    >
      <p>
        Enter the username or email associated with the account
      </p>
      <label>
        Username/Email
        <input
          name="username"
          onChange={[MockFunction]}
          required={true}
          type="text"
        />
      </label>
      <button
        type="submit"
      >
        Recover
      </button>
    </form>
    
  </main>
</div>
`;

exports[`Forgot Password component snapshots component with message 1`] = `
<div
  className="Wrappers"
>
  <main>
    <form
      onSubmit={[Function]}
    >
      <p>
        Enter the username or email associated with the account
      </p>
      <label>
        Username/Email
        <input
          name="username"
          onChange={[MockFunction]}
          required={true}
          type="text"
        />
      </label>
      <button
        type="submit"
      >
        Recover
      </button>
    </form>
    <p>
      Temporary password has been sent to test@email.com
    </p>
  </main>
</div>
`;
